[package]
name = "error_code"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Daniel Liu <139250065@qq.com>"]

[dependencies]
error_code_derive = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
error_code = { workspace = true }
http = { workspace = true }
thiserror = { workspace = true }
