[package]
name = "error_code"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Daniel Liu <139250065@qq.com>"]

[dependencies]
axum = { version = "0.7.5", features = ["http2"] }
backtrace = "0.3.71"
base64 = "0.22.1"
error_code_derive = { workspace = true }
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dev-dependencies]
anyhow = { workspace = true }
error_code = { workspace = true }
http = { workspace = true }
thiserror = { workspace = true }
